k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrms-access-ingress
  namespace: hrms
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /access
            pathType: Prefix
            backend:
              service:
                name: hrms-access-service
                port:
                  number: 3000
